# aiconomy

./: .env.example  .gitignore  README.md  build.gradle  docker-compose.yml  settings.gradle
.cursor/rules/: core-standards.mdc  git-commits-readme.mdc  java-spring.mdc  language-and-style.mdc  python-agents.mdc  security.mdc  session-context.mdc  testing.mdc
.cursor/skills/aiconomy-security/: SKILL.md
.github/workflows/: ci.yml
agents/: README.md  pyproject.toml
agents/client_agent/: __init__.py  agent.py  decision.py
agents/common/: config.py  events.py
agents/common/clients/: ledger.py  tasks.py
agents/common/kafka/: producer.py  topics.py
agents/common/llm/: factory.py  gemini_provider.py  mock_provider.py  ollama_provider.py  provider.py
agents/manager_agent/: __init__.py  agent.py  decision.py
agents/scripts/: demo_freelance.py
agents/tests/: test_client_decision.py  test_events.py  test_kafka_topics.py  test_ledger_client.py  test_llm_factory.py  test_manager_decision.py  test_worker_decision.py
agents/worker_agent/: __init__.py  agent.py  decision.py
aiconomy-common/: build.gradle
aiconomy-ledger/: build.gradle
aiconomy-ledger/src/main/resources/: application.yml
aiconomy-market/: build.gradle
aiconomy-market/src/main/resources/: application.yml
aiconomy-tasks/: build.gradle
aiconomy-tasks/src/main/resources/: application.yml
docs/: architecture.md  infrastructure.md
infra/scripts/: e2e-ledger.sh  e2e-trade.sh  smoke-test.sh
src/main/resources/: application.properties
(+102 files in other folders)
