[project]
name = "aiconomy-agents"
version = "0.2.0"
description = "Multi-agent freelancing economy for the AIconomy simulation"
requires-python = ">=3.11"
dependencies = [
    "confluent-kafka>=2.6.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["common*", "client_agent*", "manager_agent*", "worker_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
